[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "gitpython>=3.1.44",
    "markdown2>=2.5.3",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydub>=0.25.1",
    "python-dateutil>=2.9.0.post0",
    "requests",
    "scikit-learn>=1.6.1",
    "speechrecognition>=3.14.1",
    "uvicorn>=0.34.0",
]
